demo last commit

--- a/angular-ui-medi-astra/src/app/report-employee/report-employee.component.html
+++ b/angular-ui-medi-astra/src/app/report-employee/report-employee.component.html
@@ -1,8 +1,13 @@
-
-<h4 style="text-align:center">Pie Chart For Corona vaccines intake Empoyees..</h4>
-
-<div class="chart-container" style="position: relative; height:100%; width:100%">
-
-<canvas id="canvas"></canvas>
-
+<div class="chart-container">
+<h4 style="text-align:center">Pie Chart For Corona Vaccines Intake</h4>
+<canvas baseChart
+	[data]="pieChartData"
+	[labels]="pieChartLabels"
+	[chartType]="pieChartType"
+	[options]="pieChartOptions"
+	[colors]="pieChartColors"
+	[legend]="pieChartLegend">
+</canvas>
 </div>
+
+
